// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SelectedItem render connection lines 1`] = `

<div>
  <div class="relative">
    <gui-card classname="relative my-4 border-muted-foreground">
      <div class="flex w-full justify-stretch gap-4 p-6">
        <div
          class="flex w-full grow items-start gap-4"
          style="opacity: 0;"
        >
          <span class="relative flex shrink-0 overflow-hidden size-16 rounded-lg border border-solid border-neutral-200">
            <span class="flex h-full w-full items-center justify-center bg-muted rounded-lg border-none">
              <svg
                xmlns="http://www.w3.org/2000/svg"
                width="24"
                height="24"
                viewbox="0 0 24 24"
                fill="none"
                stroke="currentColor"
                stroke-width="2"
                stroke-linecap="round"
                stroke-linejoin="round"
                class="lucide lucide-package"
              >
                <path d="M11 21.73a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73z">
                </path>
                <path d="M12 22V12">
                </path>
                <path d="m3.3 7 7.703 4.734a2 2 0 0 0 1.994 0L20.7 7">
                </path>
                <path d="m7.5 4.27 9 5.15">
                </path>
              </svg>
            </span>
          </span>
          <div class="flex flex-col">
            <div class="mt-2">
              <span class="text-3xl font-medium">
                item
              </span>
              <span class="text-xl mb-[1px] font-medium text-muted-foreground">
                1.0.0
              </span>
            </div>
          </div>
        </div>
        <div class="mt-4 flex w-full flex-col justify-end gap-4">
          <div class="flex flex-row-reverse items-center gap-2">
          </div>
        </div>
      </div>
      <div class="w-full px-4 pb-4">
        <gui-tabs>
          <gui-tabs-list classname="grid w-full grid-cols-2">
            <gui-tabs-trigger
              value="package.json"
              classname="w-36"
            >
              <svg
                xmlns="http://www.w3.org/2000/svg"
                width="16"
                height="16"
                viewbox="0 0 24 24"
                fill="none"
                stroke="currentColor"
                stroke-width="2"
                stroke-linecap="round"
                stroke-linejoin="round"
                class="lucide lucide-file-search2 mr-2"
              >
                <path d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z">
                </path>
                <path d="M14 2v4a2 2 0 0 0 2 2h4">
                </path>
                <circle
                  cx="11.5"
                  cy="14.5"
                  r="2.5"
                >
                </circle>
                <path d="M13.3 16.3 15 18">
                </path>
              </svg>
              package.json
            </gui-tabs-trigger>
          </gui-tabs-list>
          <gui-tabs-content value="package.json">
          </gui-tabs-content>
        </gui-tabs>
      </div>
    </gui-card>
    <div class="absolute -right-4 top-[44px] w-4 rounded-tr-sm border-t border-solid border-neutral-300 dark:border-neutral-600">
    </div>
  </div>
</div>

`;

exports[`SelectedItem render with custom registry 1`] = `

<div>
  <div class="relative">
    <gui-card classname="relative my-4 border-muted-foreground">
      <div class="flex w-full justify-stretch gap-4 p-6">
        <div
          class="flex w-full grow items-start gap-4"
          style="opacity: 0;"
        >
          <span class="relative flex shrink-0 overflow-hidden size-16 rounded-lg border border-solid border-neutral-200">
            <span class="flex h-full w-full items-center justify-center bg-muted rounded-lg border-none">
              <svg
                xmlns="http://www.w3.org/2000/svg"
                width="24"
                height="24"
                viewbox="0 0 24 24"
                fill="none"
                stroke="currentColor"
                stroke-width="2"
                stroke-linecap="round"
                stroke-linejoin="round"
                class="lucide lucide-package"
              >
                <path d="M11 21.73a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73z">
                </path>
                <path d="M12 22V12">
                </path>
                <path d="m3.3 7 7.703 4.734a2 2 0 0 0 1.994 0L20.7 7">
                </path>
                <path d="m7.5 4.27 9 5.15">
                </path>
              </svg>
            </span>
          </span>
          <div class="flex flex-col">
            <div class="mt-2">
              <span class="text-3xl font-medium">
                item
              </span>
              <span class="text-xl mb-[1px] font-medium text-muted-foreground">
                1.0.0
              </span>
            </div>
            <div>
              <button
                data-state="closed"
                class="m-0 truncate px-1 py-1 align-baseline font-mono text-xs text-muted-foreground"
              >
                <span>
                  custom:
                </span>
                <span>
                  item@1.0.0
                </span>
              </button>
            </div>
          </div>
        </div>
        <div class="mt-4 flex w-full flex-col justify-end gap-4">
          <div class="flex flex-row-reverse items-center gap-2">
          </div>
        </div>
      </div>
      <div class="w-full px-4 pb-4">
        <gui-tabs>
          <gui-tabs-list classname="grid w-full grid-cols-2">
            <gui-tabs-trigger
              value="package.json"
              classname="w-36"
            >
              <svg
                xmlns="http://www.w3.org/2000/svg"
                width="16"
                height="16"
                viewbox="0 0 24 24"
                fill="none"
                stroke="currentColor"
                stroke-width="2"
                stroke-linecap="round"
                stroke-linejoin="round"
                class="lucide lucide-file-search2 mr-2"
              >
                <path d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z">
                </path>
                <path d="M14 2v4a2 2 0 0 0 2 2h4">
                </path>
                <circle
                  cx="11.5"
                  cy="14.5"
                  r="2.5"
                >
                </circle>
                <path d="M13.3 16.3 15 18">
                </path>
              </svg>
              package.json
            </gui-tabs-trigger>
          </gui-tabs-list>
          <gui-tabs-content value="package.json">
          </gui-tabs-content>
        </gui-tabs>
      </div>
    </gui-card>
  </div>
</div>

`;

exports[`SelectedItem render with default git host 1`] = `

<div>
  <div class="relative">
    <gui-card classname="relative my-4 border-muted-foreground">
      <div class="flex w-full justify-stretch gap-4 p-6">
        <div
          class="flex w-full grow items-start gap-4"
          style="opacity: 0;"
        >
          <span class="relative flex shrink-0 overflow-hidden size-16 rounded-lg border border-solid border-neutral-200">
            <span class="flex h-full w-full items-center justify-center bg-muted rounded-lg border-none">
              <svg
                xmlns="http://www.w3.org/2000/svg"
                width="24"
                height="24"
                viewbox="0 0 24 24"
                fill="none"
                stroke="currentColor"
                stroke-width="2"
                stroke-linecap="round"
                stroke-linejoin="round"
                class="lucide lucide-package"
              >
                <path d="M11 21.73a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73z">
                </path>
                <path d="M12 22V12">
                </path>
                <path d="m3.3 7 7.703 4.734a2 2 0 0 0 1.994 0L20.7 7">
                </path>
                <path d="m7.5 4.27 9 5.15">
                </path>
              </svg>
            </span>
          </span>
          <div class="flex flex-col">
            <div class="mt-2">
              <span class="text-3xl font-medium">
                item
              </span>
              <span class="text-xl mb-[1px] font-medium text-muted-foreground">
                1.0.0
              </span>
            </div>
            <div class="m-0 truncate px-1 py-1 align-baseline font-mono text-xs text-muted-foreground">
              git:github:a/b
            </div>
          </div>
        </div>
        <div class="mt-4 flex w-full flex-col justify-end gap-4">
          <div class="flex flex-row-reverse items-center gap-2">
          </div>
        </div>
      </div>
      <div class="w-full px-4 pb-4">
        <gui-tabs>
          <gui-tabs-list classname="grid w-full grid-cols-2">
            <gui-tabs-trigger
              value="package.json"
              classname="w-36"
            >
              <svg
                xmlns="http://www.w3.org/2000/svg"
                width="16"
                height="16"
                viewbox="0 0 24 24"
                fill="none"
                stroke="currentColor"
                stroke-width="2"
                stroke-linecap="round"
                stroke-linejoin="round"
                class="lucide lucide-file-search2 mr-2"
              >
                <path d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z">
                </path>
                <path d="M14 2v4a2 2 0 0 0 2 2h4">
                </path>
                <circle
                  cx="11.5"
                  cy="14.5"
                  r="2.5"
                >
                </circle>
                <path d="M13.3 16.3 15 18">
                </path>
              </svg>
              package.json
            </gui-tabs-trigger>
          </gui-tabs-list>
          <gui-tabs-content value="package.json">
          </gui-tabs-content>
        </gui-tabs>
      </div>
    </gui-card>
  </div>
</div>

`;

exports[`SelectedItem render with item 1`] = `

<div>
  <div class="relative">
    <gui-card classname="relative my-4 border-muted-foreground">
      <div class="flex w-full justify-stretch gap-4 p-6">
        <div
          class="flex w-full grow items-start gap-4"
          style="opacity: 0;"
        >
          <span class="relative flex shrink-0 overflow-hidden size-16 rounded-lg border border-solid border-neutral-200">
            <span class="flex h-full w-full items-center justify-center bg-muted rounded-lg border-none">
              <svg
                xmlns="http://www.w3.org/2000/svg"
                width="24"
                height="24"
                viewbox="0 0 24 24"
                fill="none"
                stroke="currentColor"
                stroke-width="2"
                stroke-linecap="round"
                stroke-linejoin="round"
                class="lucide lucide-package"
              >
                <path d="M11 21.73a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73z">
                </path>
                <path d="M12 22V12">
                </path>
                <path d="m3.3 7 7.703 4.734a2 2 0 0 0 1.994 0L20.7 7">
                </path>
                <path d="m7.5 4.27 9 5.15">
                </path>
              </svg>
            </span>
          </span>
          <div class="flex flex-col">
            <div class="mt-2">
              <span class="text-3xl font-medium">
                item
              </span>
              <span class="text-xl mb-[1px] font-medium text-muted-foreground">
                1.0.0
              </span>
            </div>
          </div>
        </div>
        <div class="mt-4 flex w-full flex-col justify-end gap-4">
          <div class="flex flex-row-reverse items-center gap-2">
          </div>
        </div>
      </div>
      <div class="w-full px-4 pb-4">
        <gui-tabs>
          <gui-tabs-list classname="grid w-full grid-cols-2">
            <gui-tabs-trigger
              value="package.json"
              classname="w-36"
            >
              <svg
                xmlns="http://www.w3.org/2000/svg"
                width="16"
                height="16"
                viewbox="0 0 24 24"
                fill="none"
                stroke="currentColor"
                stroke-width="2"
                stroke-linecap="round"
                stroke-linejoin="round"
                class="lucide lucide-file-search2 mr-2"
              >
                <path d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z">
                </path>
                <path d="M14 2v4a2 2 0 0 0 2 2h4">
                </path>
                <circle
                  cx="11.5"
                  cy="14.5"
                  r="2.5"
                >
                </circle>
                <path d="M13.3 16.3 15 18">
                </path>
              </svg>
              package.json
            </gui-tabs-trigger>
          </gui-tabs-list>
          <gui-tabs-content value="package.json">
          </gui-tabs-content>
        </gui-tabs>
      </div>
    </gui-card>
  </div>
</div>

`;

exports[`SelectedItem render with scoped registry 1`] = `

<div>
  <div class="relative">
    <gui-card classname="relative my-4 border-muted-foreground">
      <div class="flex w-full justify-stretch gap-4 p-6">
        <div
          class="flex w-full grow items-start gap-4"
          style="opacity: 0;"
        >
          <span class="relative flex shrink-0 overflow-hidden size-16 rounded-lg border border-solid border-neutral-200">
            <span class="flex h-full w-full items-center justify-center bg-muted rounded-lg border-none">
              <svg
                xmlns="http://www.w3.org/2000/svg"
                width="24"
                height="24"
                viewbox="0 0 24 24"
                fill="none"
                stroke="currentColor"
                stroke-width="2"
                stroke-linecap="round"
                stroke-linejoin="round"
                class="lucide lucide-package"
              >
                <path d="M11 21.73a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73z">
                </path>
                <path d="M12 22V12">
                </path>
                <path d="m3.3 7 7.703 4.734a2 2 0 0 0 1.994 0L20.7 7">
                </path>
                <path d="m7.5 4.27 9 5.15">
                </path>
              </svg>
            </span>
          </span>
          <div class="flex flex-col">
            <div class="mt-2">
              <span class="text-3xl font-medium">
                item
              </span>
              <span class="text-xl mb-[1px] font-medium text-muted-foreground">
                1.0.0
              </span>
            </div>
            <div>
              <button
                data-state="closed"
                class="m-0 truncate px-1 py-1 align-baseline font-mono text-xs text-muted-foreground"
              >
                <span>
                  registered-scope
                </span>
                <span>
                  item@1.0.0
                </span>
              </button>
            </div>
          </div>
        </div>
        <div class="mt-4 flex w-full flex-col justify-end gap-4">
          <div class="flex flex-row-reverse items-center gap-2">
          </div>
        </div>
      </div>
      <div class="w-full px-4 pb-4">
        <gui-tabs>
          <gui-tabs-list classname="grid w-full grid-cols-2">
            <gui-tabs-trigger
              value="package.json"
              classname="w-36"
            >
              <svg
                xmlns="http://www.w3.org/2000/svg"
                width="16"
                height="16"
                viewbox="0 0 24 24"
                fill="none"
                stroke="currentColor"
                stroke-width="2"
                stroke-linecap="round"
                stroke-linejoin="round"
                class="lucide lucide-file-search2 mr-2"
              >
                <path d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z">
                </path>
                <path d="M14 2v4a2 2 0 0 0 2 2h4">
                </path>
                <circle
                  cx="11.5"
                  cy="14.5"
                  r="2.5"
                >
                </circle>
                <path d="M13.3 16.3 15 18">
                </path>
              </svg>
              package.json
            </gui-tabs-trigger>
          </gui-tabs-list>
          <gui-tabs-content value="package.json">
          </gui-tabs-content>
        </gui-tabs>
      </div>
    </gui-card>
  </div>
</div>

`;
